frontend/test/should_fail/index_exec_loop_node_fromIndexFromTo_argument_mismatch.grg
#using "index_exec_model.gm"

sequence s()
{
	for{n:Node in nodesFromIndexFromToAscending(fooi, "0", 42); true }
}